lect11/terminal_output.txt
dibamirza@ResNet-45-2 ~ % pwd
/Users/dibamirza
dibamirza@ResNet-45-2 ~ % cd lectures/lect10 
dibamirza@ResNet-45-2 lect10 % ls
a.out                   demoFiles01.cpp         small_dataset.csv
character_stats.csv     demoFiles02.cpp         terminal_output.txt
dibamirza@ResNet-45-2 lect10 % make demoFiles03
make: *** No rule to make target `demoFiles03'.  Stop.
dibamirza@ResNet-45-2 lect10 % ls
a.out                   character_stats.csv     demoFiles01.cpp         demoFiles02.cpp         small_dataset.csv       terminal_output.txt
dibamirza@ResNet-45-2 lect10 % g++ demoFiles03.cpp
clang: error: no such file or directory: 'demoFiles03.cpp'
clang: error: no input files
dibamirza@ResNet-45-2 lect10 % ls
a.out                   character_stats.csv     demoFiles01.cpp         demoFiles02.cpp         small_dataset.csv       terminal_output.txt
dibamirza@ResNet-45-2 lect10 % cd ../lect11
dibamirza@ResNet-45-2 lect11 % ls
a.out                   character_stats.csv     demoFiles02.cpp         small_dataset.csv
ascii.cpp               demoFiles01.cpp         demoFiles03.cpp         terminal_output.txt
dibamirza@ResNet-45-2 lect11 % make demoFiles03
c++     demoFiles03.cpp   -o demoFiles03
demoFiles03.cpp:43:16: error: implicit instantiation of undefined template 'std::vector<std::string>'
vector<string> split(string line, char delim){
               ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/iosfwd:248:28: note: template is declared here
class _LIBCPP_TEMPLATE_VIS vector;
                           ^
demoFiles03.cpp:45:20: error: implicit instantiation of undefined template 'std::vector<std::string>'
    vector<string> result;
                   ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/iosfwd:248:28: note: template is declared here
class _LIBCPP_TEMPLATE_VIS vector;
                           ^
demoFiles03.cpp:72:23: error: implicit instantiation of undefined template 'std::vector<superhero>'
    vector<superhero> heros;
                      ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/iosfwd:248:28: note: template is declared here
class _LIBCPP_TEMPLATE_VIS vector;
                           ^
demoFiles03.cpp:74:24: error: implicit instantiation of undefined template 'std::vector<std::string>'
        vector<string> parts = split(line, ',');
                       ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/iosfwd:248:28: note: template is declared here
class _LIBCPP_TEMPLATE_VIS vector;
                           ^
4 errors generated.
make: *** [demoFiles03] Error 1
dibamirza@ResNet-45-2 lect11 % make demoFiles03
c++     demoFiles03.cpp   -o demoFiles03
dibamirza@ResNet-45-2 lect11 % ./demoFiles03 small_dataset.csv 
Name,Alignment,Intelligence,Strength,Speed,Durability,Power,Combat,Total
No. of superheros is 0
dibamirza@ResNet-45-2 lect11 % make demoFiles03               
c++     demoFiles03.cpp   -o demoFiles03
demoFiles03.cpp:80:35: error: expected '(' for function-style cast or type construction
        heros.push_back(superhero {name, intelligence, strength, speed});
                        ~~~~~~~~~ ^
1 error generated.
make: *** [demoFiles03] Error 1
dibamirza@ResNet-45-2 lect11 % g++ -std=c++11 demoFiles03.cpp 
dibamirza@ResNet-45-2 lect11 % g++ demoFiles01.cpp
dibamirza@ResNet-45-2 lect11 % ls
a.out                   character_stats.csv     demoFiles02.cpp         demoFiles03.cpp         terminal_output.txt
ascii.cpp               demoFiles01.cpp         demoFiles03             small_dataset.csv
dibamirza@ResNet-45-2 lect11 % g++ demoFiles01.cpp -o demo1
dibamirza@ResNet-45-2 lect11 % ls
a.out                   character_stats.csv     demoFiles01.cpp         demoFiles03             small_dataset.csv
ascii.cpp               demo1                   demoFiles02.cpp         demoFiles03.cpp         terminal_output.txt
dibamirza@ResNet-45-2 lect11 % g++ -c demoFiles01.cpp      
dibamirza@ResNet-45-2 lect11 % ls
a.out                   character_stats.csv     demoFiles01.cpp         demoFiles02.cpp         demoFiles03.cpp         terminal_output.txt
ascii.cpp               demo1                   demoFiles01.o           demoFiles03             small_dataset.csv
dibamirza@ResNet-45-2 lect11 % g++ -c demoFiles02.cpp
dibamirza@ResNet-45-2 lect11 % g++ -std=c++11 demoFiles03.cpp -o demoFiles03
dibamirza@ResNet-45-2 lect11 % ./demoFiles03 small_dataset.csv 
Name,Alignment,Intelligence,Strength,Speed,Durability,Power,Combat,Total
No. of superheros is 7
[ Name: 3-D Man, Intelligence:  50, Strength:  31, Speed:  43]

[ Name: A-Bomb, Intelligence:  38, Strength:  100, Speed:  17]

[ Name: Abe Sapien, Intelligence:  88, Strength:  14, Speed:  35]

[ Name: Abin Sur, Intelligence:  50, Strength:  90, Speed:  53]

[ Name: Abomination, Intelligence:  63, Strength:  80, Speed:  53]

[ Name: Abraxas, Intelligence:  88, Strength:  100, Speed:  83]

[ Name: Adam Monroe, Intelligence:  63, Strength:  10, Speed:  12]

dibamirza@ResNet-45-2 lect11 % 
dibamirza@ResNet-45-2 lect11 % 
dibamirza@ResNet-45-2 lect11 % 
dibamirza@ResNet-45-2 lect11 % g++ ascii.cpp 
dibamirza@ResNet-45-2 lect11 % ./a.out 
a
a
10
161
int(digit): 49
stoi(digit): 1
dibamirza@ResNet-45-2 lect11 % g++ ascii.cpp
dibamirza@ResNet-45-2 lect11 % ./a.out      
a
a
10
161
-1
int(digit): 49
stoi(digit): 1
dibamirza@ResNet-45-2 lect11 % g++ ascii.cpp
ascii.cpp:21:13: error: expected expression
    cout << << hex<< int(e) << endl;
            ^
1 error generated.
dibamirza@ResNet-45-2 lect11 % g++ ascii.cpp
dibamirza@ResNet-45-2 lect11 % ./a.out      
a
a
10
161
ffffffff
int(digit): 31
stoi(digit): 1
dibamirza@ResNet-45-2 lect11 % g++ series.cpp
series.cpp:16:5: error: use of undeclared identifier 'cout'
    cout<<series(1) << endl;
    ^
series.cpp:16:24: error: use of undeclared identifier 'endl'
    cout<<series(1) << endl;
                       ^
series.cpp:17:5: error: use of undeclared identifier 'cout'
    cout<<series(2) << endl;
    ^
series.cpp:17:24: error: use of undeclared identifier 'endl'
    cout<<series(2) << endl;
                       ^
series.cpp:18:5: error: use of undeclared identifier 'cout'
    cout<<series(3) << endl;
    ^
series.cpp:18:24: error: use of undeclared identifier 'endl'
    cout<<series(3) << endl;
                       ^
series.cpp:19:5: error: use of undeclared identifier 'cout'
    cout<<series(4) << endl;
    ^
series.cpp:19:24: error: use of undeclared identifier 'endl'
    cout<<series(4) << endl;
                       ^
8 errors generated.
dibamirza@ResNet-45-2 lect11 % g++ series.cpp
dibamirza@ResNet-45-2 lect11 % ./a.out
1
1
1
1
dibamirza@ResNet-45-2 lect11 % g++ series.cpp
dibamirza@ResNet-45-2 lect11 % ./a.out       
1
1.5
1.83333
2.08333
dibamirza@ResNet-45-2 lect11 % git add .
dibamirza@ResNet-45-2 lect11 % git commit -m "lect 11"
[main 94d1607] lect 11
 6 files changed, 149 insertions(+), 21 deletions(-)
 create mode 100755 lect11/demo1
 create mode 100755 lect11/demoFiles03
 create mode 100644 lect11/demoFiles03.cpp
 create mode 100644 lect11/series.cpp
dibamirza@ResNet-45-2 lect11 % git push
Enumerating objects: 13, done.
Counting objects: 100% (13/13), done.
Delta compression using up to 8 threads
Compressing objects: 100% (9/9), done.
Writing objects: 100% (9/9), 42.49 KiB | 4.25 MiB/s, done.
Total 9 (delta 3), reused 0 (delta 0), pack-reused 0
remote: Resolving deltas: 100% (3/3), completed with 2 local objects.
To github.com:ucsb-cs16-f22/lectures.git
   0281f72..94d1607  main -> main
dibamirza@ResNet-45-2 lect11 % 